--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Início</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -11,10 +12,16 @@
 <div class="container">
     <h1>Por favor, escolha uma opção</h1>
 
-    <a href="login.php">Login</a>
-    <a href="cadastro.php">Cadastro</a>
+    <ul>
+        <li><a href="login.php">Login</a></li>
+        <li><a href="cadastro.php">Cadastro</a></li>
+    </ul>
 
-    <p>Caso seja sua primeira vez neste site, siga para a área "Cadastro"</p>
+    <p><em>Caso seja sua primeira vez neste site, siga para a área "Cadastro"</em></p>
+    
+    <ul class="adm">
+        <li><a href="editar.php">Área ADM</a></li>
+    </ul>
 </div>
 
 </body>
