conectando ao db

--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
         <li><a href="editar.php">Área ADM</a></li>
     </ul>
 </div>
-
+<p>OBS: Para entrar na "Área ADM" usar "root" como senha e usuário</p>
 </body>
 </html>
